--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,10 @@ body {
   max-height: 100vh;
   overflow: hidden;
 }
+
+.social-icon {
+  vertical-align: top;
+  display: inline-block;
+  margin-right: 15px;
+  text-align: center;
+}
